<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="60dip"
    android:background="@drawable/bg_dialog"
    android:scaleType="fitXY"
    android:orientation="vertical"
	android:keepScreenOn="true">

	<TextView
		android:id="@+id/tvMessage"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="40dp"
		android:text="TextView" />

	<LinearLayout
		android:id="@+id/layout_source"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="start"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/source_text_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:gravity="left|center_vertical"
			android:text="@string/str_source"
			android:textSize="20dp" />

		<TextView
			android:id="@+id/source_Text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:ellipsize="start"
			android:gravity="left|center_vertical"
			android:marqueeRepeatLimit="marquee_forever"
			android:scrollHorizontally="true"
			android:singleLine="true"
			android:textSize="20dp" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/layout_target"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="start"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/target_text_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dip"
			android:gravity="left|center_vertical"
			android:text="@string/str_target"
			android:textSize="20dp" />

		<TextView
			android:id="@+id/target_Text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dip"
			android:ellipsize="start"
			android:gravity="left|center_vertical"
			android:marqueeRepeatLimit="marquee_forever"
			android:scrollHorizontally="true"
			android:singleLine="true"
			android:textSize="20dp" />
	</LinearLayout>
		
		<LinearLayout
		    android:id="@+id/layout_one_percent"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">
		  	<ProgressBar
		  		android:id="@+id/one_copy_percent"
				android:layout_height="30dip"
				android:layout_width="0dp"
				android:layout_gravity="center"
				android:layout_weight="4"
				android:max="100"
				android:progress="0"
				android:focusable="false"
				android:clickable="false"
				style="?android:attr/progressBarStyleHorizontal"/>

			<TextView
				android:id="@+id/one_percent_Text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginRight="30dip"
				android:layout_weight="1"
				android:focusable="false"
				android:gravity="right"
				android:textSize="30sp" />
		</LinearLayout>
		
		<LinearLayout
		    android:id="@+id/layout_all_percent"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">
			<ProgressBar
		  		android:id="@+id/all_copy_percent" 
		     	android:layout_height="30dip" 
				android:layout_width="0dp" 
				android:layout_gravity="center" 
				android:layout_weight="4"
				android:max="100" 
				android:progress="0" 
				style="?android:attr/progressBarStyleHorizontal"/>

			<TextView
				android:id="@+id/all_percent_Text"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="right"
				android:textSize="30sp" />

			<ImageButton
				android:id="@+id/but_stop_copy"
				android:layout_width="30dip"
				android:layout_height="match_parent"
				android:background="@android:color/transparent"
				android:gravity="center"
				android:scaleType="fitCenter"
				android:src="@drawable/transmission_cancel" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal">

		</LinearLayout>

	<TextView
		android:id="@+id/textView14"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:singleLine="false"
		android:text="@string/str_copy_reminder" />
</LinearLayout>
