<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/gray_e3e3e3"
            app:cardCornerRadius="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_height_32"
                    android:background="@drawable/bg_e8e7e8_to_cecbcd" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray_adabad" />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/margin_32"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_marginEnd="@dimen/margin_32">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/img_size_80"
                        android:layout_height="@dimen/img_size_80"
                        android:padding="@dimen/padding_8"
                        android:background="@drawable/bg_corner500_919395"
                        app:srcCompat="@drawable/ios_power" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_8"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_20"
                            android:textStyle="bold"
                            android:text="@string/dialog_shut_down_msg" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_8"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_20"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="@dimen/margin_32"
                    android:layout_marginEnd="@dimen/margin_32"
                    android:layout_marginTop="@dimen/margin_64"
                    android:layout_marginBottom="@dimen/margin_32">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/sleep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_32"
                        android:paddingEnd="@dimen/padding_32"
                        android:paddingTop="@dimen/padding_4"
                        android:paddingBottom="@dimen/padding_4"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:text="@string/sleep"
                        android:background="@drawable/bg_corner7_f5f5f5_line2_c1c1c1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_32"
                        android:paddingEnd="@dimen/padding_32"
                        android:paddingTop="@dimen/padding_4"
                        android:paddingBottom="@dimen/padding_4"
                        android:layout_marginStart="@dimen/margin_16"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16"
                        android:text="@string/cancel"
                        android:background="@drawable/bg_corner7_63adeb_to_0a7fee_line2_1460ed" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/shoutDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_32"
                        android:paddingEnd="@dimen/padding_32"
                        android:paddingTop="@dimen/padding_4"
                        android:paddingBottom="@dimen/padding_4"
                        android:layout_marginStart="@dimen/margin_16"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_16"
                        android:text="@string/shut_down"
                        android:background="@drawable/bg_corner7_f5f5f5_line2_c1c1c1" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>