<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white_f5f5f5"
            android:paddingStart="@dimen/padding_32"
            android:paddingEnd="@dimen/padding_32"
            android:paddingBottom="@dimen/padding_24"
            android:paddingTop="@dimen/padding_32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_patient_id"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_30"
                android:padding="@dimen/padding_4" />


            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/layout_width_400"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32"
                app:cardBackgroundColor="@color/gray_e2e2e2"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/patientId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:padding="@dimen/padding_8"
                    android:textSize="@dimen/text_size_20" />

            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_32">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:textSize="@dimen/text_size_20"
                    android:textColor="@color/black_232324"
                    android:maxLines="1"
                    android:ellipsize="end"
                    app:backgroundTint="@color/btn_color_07"
                    app:elevation="0dp"
                    app:rippleColor="@android:color/transparent"
                    app:cornerRadius="8dp"
                    app:strokeColor="@color/gray_9b9b9b"
                    app:strokeWidth="2dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textSize="@dimen/text_size_20"
                    android:textColor="@color/black_232324"
                    android:maxLines="1"
                    android:ellipsize="end"
                    app:backgroundTint="@color/btn_color_07"
                    app:elevation="0dp"
                    app:rippleColor="@android:color/transparent"
                    app:cornerRadius="8dp"
                    app:strokeColor="@color/gray_9b9b9b"
                    app:strokeWidth="2dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.app.customkeyboard.keyboard.CustomKeyboardView
            android:id="@+id/customKeyboardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>